--- a/style.css
+++ b/style.css
@@ -1367,6 +1367,8 @@ blockquote {
   z-index: 99999;
   text-align: left;
   padding-top: 5px;
+  margin-top: -1px;
+  /* fixes 1px gap */
 }
 
 .main-navigation ul ul ul {
